starlark-rust/starlark_syntax/src/lexer_tests/reserved.fail.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
as

Error:
error: Parse error: cannot use reserved keyword `as`
 --> x:1:1
  |
1 | as
  | ^^
  |


Program:
import

Error:
error: Parse error: cannot use reserved keyword `import`
 --> x:1:1
  |
1 | import
  | ^^^^^^
  |


Program:
is

Error:
error: Parse error: cannot use reserved keyword `is`
 --> x:1:1
  |
1 | is
  | ^^
  |


Program:
class

Error:
error: Parse error: cannot use reserved keyword `class`
 --> x:1:1
  |
1 | class
  | ^^^^^
  |


Program:
nonlocal

Error:
error: Parse error: cannot use reserved keyword `nonlocal`
 --> x:1:1
  |
1 | nonlocal
  | ^^^^^^^^
  |


Program:
del

Error:
error: Parse error: cannot use reserved keyword `del`
 --> x:1:1
  |
1 | del
  | ^^^
  |


Program:
raise

Error:
error: Parse error: cannot use reserved keyword `raise`
 --> x:1:1
  |
1 | raise
  | ^^^^^
  |


Program:
except

Error:
error: Parse error: cannot use reserved keyword `except`
 --> x:1:1
  |
1 | except
  | ^^^^^^
  |


Program:
try

Error:
error: Parse error: cannot use reserved keyword `try`
 --> x:1:1
  |
1 | try
  | ^^^
  |


Program:
finally

Error:
error: Parse error: cannot use reserved keyword `finally`
 --> x:1:1
  |
1 | finally
  | ^^^^^^^
  |


Program:
while

Error:
error: Parse error: cannot use reserved keyword `while`
 --> x:1:1
  |
1 | while
  | ^^^^^
  |


Program:
from

Error:
error: Parse error: cannot use reserved keyword `from`
 --> x:1:1
  |
1 | from
  | ^^^^
  |


Program:
with

Error:
error: Parse error: cannot use reserved keyword `with`
 --> x:1:1
  |
1 | with
  | ^^^^
  |


Program:
global

Error:
error: Parse error: cannot use reserved keyword `global`
 --> x:1:1
  |
1 | global
  | ^^^^^^
  |


Program:
yield

Error:
error: Parse error: cannot use reserved keyword `yield`
 --> x:1:1
  |
1 | yield
  | ^^^^^
  |
